--- a/app/views/web/ost/partners/_member_companies.erb
+++ b/app/views/web/ost/partners/_member_companies.erb
@@ -172,7 +172,7 @@
              image: img_root + "pepo.jpg",
            image_height: '35',
            image_alt: 'Pepo',
-           description: "Thousands of people use <span class='text-bold'>Pepo</span> every day to share insider tips on local hot spots and travel destinations. Every time a tip is upvoted, Pepo Coin are transferred from one user to another as thanks for the tip. Pepo users will be able to spend Pepo Coin on related local and travel services such as travel advise, personalized itineraries and tours."
+           description: "The OST | Open Simple Token project was born out of Pepo, a consumer recommendations app. The entire Pepo team is now fully focused on building the OST technology stack and solutions."
            },
            ]
         %>
