--- a/app/views/web/ost/team/_team.erb
+++ b/app/views/web/ost/team/_team.erb
@@ -44,7 +44,7 @@
                                 title: "Chief Financial Officer & GM North America",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Renee-Wong.jpg",
                                 linkedIn: 'https://www.linkedin.com/in/renee-wong-340ba91/',
-                                description: "Renee Wong is seasoned financial strategist with 10+ years experiene as CFO and General Manager in high growth businesses. Her previous experience includes executive and financial leadership roles at Dashlane, Fab.com, and Pop Sugar."
+                                description: "Renee Wong is seasoned financial strategist with 10+ years experience as CFO and General Manager in high growth businesses. Her previous experience includes executive and financial leadership roles at Dashlane, Fab.com, and Pop Sugar."
                             },
                             {
                                 name: "Adeola Ogunwole",
@@ -69,7 +69,7 @@
                                 linkedIn: 'https://www.linkedin.com/in/pauljduplessis/',
                                 twitter: 'https://twitter.com/paulduplessis/',
                                 medium: 'https://medium.com/@pauldups/',
-                                description: "Paul J du Plessis has 10 years experience building technology for enterprises and growing startups in fintech, insuretech and blockchain technology. Paul joins Simple Token as the business development lead working closely with the member companies launching their own branded tokens on the Simple Token network of networks. You can find Paul in Berlin, Germany and Pune, India."
+                                description: "Paul J du Plessis has 10 years experience building technology for enterprises and growing startups in fintech, insuretech and blockchain technology. Paul joins OST as the business development lead working closely with the member companies launching their own branded tokens on the OST network of networks. You can find Paul in Berlin, Germany and Pune, India."
                             },
                             {
                                 name: "Francesco Pacella",
@@ -103,7 +103,7 @@
                                 name: "Prineel Bandellu",
                                 title: "Lead User Experience Designer",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Prineel-Bandellu.png",
-                                linkedIn: 'https://www.linkedin.com/in/amulyachirala/',
+                                linkedIn: 'https://www.linkedin.com/in/prineelbandellu/',
                                 description: "Prineel is a Lead UX Designer with 7 years of experience in designing SaaS & Consumer products from the ground up. With his user centered approach to problem solving he has designed high impact web solution with strong emotional appeal across various domains. Prineel is based in Pune, India."
                             },
                             {
@@ -118,7 +118,7 @@
                                 title: "Director of the CEO Office",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Ignas-Peciura.png",
                                 linkedIn: 'https://www.linkedin.com/in/peciurai/',
-                                description: "Ignas helps ensure the entire Simple Token business is running smoothly. Ignas has marketing, product management, and ops experience in consumer and B2B apps and financial services. His recent work experience includes Simple Token, Pepo, Mambu GmbH, and Barclays bank. Ignas lives in Berlin where he’s as passionate about the city as he is about his work."
+                                description: "Ignas helps ensure the entire OST business is running smoothly. Ignas has marketing, product management, and ops experience in consumer and B2B apps and financial services. His recent work experience includes OST, Pepo, Mambu GmbH, and Barclays bank. Ignas lives in Berlin where he’s as passionate about the city as he is about his work."
                             },
                             {
                                 name: "Akshay Raje",
@@ -127,7 +127,7 @@
                                 twitter: 'https://twitter.com/akshayraje/',
                                 medium: 'https://medium.com/@akshayraje/',
                                 linkedIn: 'https://www.linkedin.com/in/akshayraje/',
-                                description: "Akshay is a lead front-end engineer and the in-house JavaScript expert. He has the expertise in cutting edge front-end technologies, PHP, WordPress and Google Apps. He's a enthusiastic about trading crypto-currencies and often writes about these topics on Medium and Quora."
+                                description: "Akshay is a lead front-end engineer and the in-house JavaScript expert. He has the expertise in cutting edge front-end technologies, PHP, WordPress and Google Apps. He's enthusiastic about trading crypto-currencies and often writes about these topics on Medium and Quora."
                             },
                             {
                                 name: "Sneha Golechha",
@@ -205,7 +205,7 @@
                                 title: "Business Development Manager",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Jordan-McDonal.jpg",
                                 linkedIn: 'https://www.linkedin.com/in/jordanrmcdonald/',
-                                description: "Jordan brings his extensive business development experience to Simple Token, and will work closely with our partner companies to help them launch their own branded cryptocurrencies. He gets his kicks from building new businesses and personal art projects."
+                                description: "Jordan brings his extensive business development experience to OST, and will work closely with our partner companies to help them launch their own branded cryptocurrencies. He gets his kicks from building new businesses and personal art projects."
                             },
                             {
                                 name: "Puneet Khushwani",
@@ -269,21 +269,21 @@
                                 title: "Community Manager",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Francis-Dufour.png",
                                 linkedIn: 'https://www.linkedin.com/in/francis-dufour-25357960/',
-                                description: "Francis is Simple Token community manager and the success and strength of Simple Token's community is the center of his attention. Since 2012 Francis has been involved in crypto-economics and blockchain techology. Francis is based in Montreal, Canada."
+                                description: "Francis is OST community manager and the success and strength of OST's community is the center of his attention. Since 2012 Francis has been involved in crypto-economics and blockchain techology. Francis is based in Montreal, Canada."
                             },
                             {
                                 name: "Ashfaq Bhojani",
                                 title: "Administration Director",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Ashfaq-Bhojani.png",
                                 linkedIn: 'https://www.linkedin.com/in/ashfaq-bhojani-842b136/',
-                                description: "Ashfaq is an experienced professional with experience in Operations Management including Facilities, Administration, Travel, Hospitality & HR across industries such as IT/ITES, Healthcare & Hospitality. With his expertise, experience & energy, Ashfaq provides strategic & tactical support critical to ensure smooth Simple Token business operations."
+                                description: "Ashfaq is an experienced professional with experience in Operations Management including Facilities, Administration, Travel, Hospitality & HR across industries such as IT/ITES, Healthcare & Hospitality. With his expertise, experience & energy, Ashfaq provides strategic & tactical support critical to ensure smooth OST business operations."
                             },
                             {
                                 name: "Wilson Chia",
                                 title: "Community Manager",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/wilson-chia.png",
                                 linkedIn: 'https://www.linkedin.com/in/chiawilson',
-                                description: "Wilson is a community manager and a cryptocurrency enthusiast. As a community manager, he seeks to share knowledge about Simple Token in a concise and meaningful manner. Wilson is also passionate about analytics projects and deriving insights from data. Wilson is based in Singapore."
+                                description: "Wilson is a community manager and a cryptocurrency enthusiast. As a community manager, he seeks to share knowledge about OST in a concise and meaningful manner. Wilson is also passionate about analytics projects and deriving insights from data. Wilson is based in Singapore."
                             },
                             {
                                 name: "Santhosh Reddy",
@@ -317,8 +317,57 @@
                                 name: "Anna Balog",
                                 title: "Office Manager",
                                 image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Anna-Balog.png",
-                                linkedIn: 'www.linkedin.com/in/anna-balog-0b2132b8',
-                                description: "Anna has a lot of experience in tourism and customer service: At OST she puts these quaities to work to support the Berlin team in their daily operations, from travel arrangements to general administrative support."
+                                linkedIn: 'https://www.linkedin.com/in/anna-balog-0b2132b8/',
+                                description: "Anna has a lot of experience in tourism and customer service: At OST she puts these qualities to work to support the Berlin team in their daily operations, from travel arrangements to general administrative support."
+                            },
+                            {
+                                name: "Nike Oberemm",
+                                title: "Junior Product Manager",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Nike-Oberemm.png",
+                                linkedIn: 'https://www.linkedin.com/in/nikeoberemm/',
+                                description: "Nike is a Junior Product Manager with a passion for digital product development. She got excited about Blockchain when she started researching the technology for her thesis at the Freie Universität in Berlin, where she studied Business Administration with focus on Business Informatics and Innovation Management."
+                            },
+                            {
+                                name: "Drew Brownell",
+                                title: "Director of Financial Planning & Analysis",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Drew-Brownell.png",
+                                linkedIn: 'https://www.linkedin.com/in/drewbrownell/',
+                                description: "Drew has 10+ years experience as a key contributor in a number of finance and operations capacities. After beginning his career at Glencore, he pivoted to become an early finance hire at an online education startup which grew from five employees to a successful exit. He enjoys corporate finance, concerts, and comedy."
+                            },
+                            {
+                                name: "Asaf Weitzman",
+                                title: "Global Controller",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Asaf.png",
+                                linkedIn: 'https://www.linkedin.com/in/asaf-weitzman-cpa-3b13404/',
+                                description: "Asaf Weitzman is a seasoned NY Certified Public Accountant with 12+ years of mixed public and corporate experience in accounting, audit and tax. Asaf joined OST after working in accounting and finance leadership roles for NYC-based global tech and e-commerce start-ups. Outside of work, Asaf enjoys working on home improvement projects and spending time with his wife and 2 kids."
+                            },
+                            {
+                                name: "Paruyr Gevorgyan",
+                                title: "Senior Blockchain Engineer",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Paruyr-Gevorgyan.png",
+                                linkedIn: 'https://www.linkedin.com/in/paruyrgevorgyan/',
+                                description: "Paruyr (Pro) Gevorgyan is a technology enthusiast with a keen interest in Blockchain. As an advocate for privacy, security and openness, he is a strong believer of the promises Blockchain holds. Pro is passionate about playing chess and travelling. Originally from Yerevan, Armenia, he now lives and works in the IT heart of Europe, Berlin."
+                            },
+                            {
+                                name: "Kevin Parulekar",
+                                title: "Business Development Director",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Kevin-Parulekar.png",
+                                linkedIn: 'www.linkedin.com/in/kevin-parulekar-b5035288',
+                                description: "Kevin Parulekar is the Director of Business Development for OST in the Americas. He brings over 15 years of experience leading global teams in strategy consulting, fintech, and social impact. As a former tech founder and development banker, Kevin is fascinated by the potential for blockchain technologies to transform humanity."
+                            },
+                            {
+                                name: "Paul Kuveke",
+                                title: "Blockchain Strategy Consultant",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Paul-Kuveke.png",
+                                linkedIn: 'https://www.linkedin.com/in/paul-kuveke-32628652',
+                                description: "Paul gets excited by big ideas and was an early supporter of several second-generation crypto projects. He partners with OST’s North American member companies to integrate Blockchain technology solutions into their businesses. Paul joins from Booz Allen Hamilton where he helped organizations design and execute flexible business solutions."
+                            },
+                            {
+                                name: "Sarvesh Jain",
+                                title: "Blockchain Engineer",
+                                image: "https://d36lai1ppm9dxu.cloudfront.net/assets/image/team/Sarvesh-Jain.png",
+                                linkedIn: 'https://www.linkedin.com/in/jainsarvesh',
+                                description: "Sarvesh, a Software Engineer, joined the Pune Team as a Blockchain Developer. He is an expert in backend development and system designing. Sarvesh loves to travel and he is an avid cyclist. In his free time, he likes to read up on the latest news in the tech industry."
                             },
                             ];
 
