--- a/app/assets/stylesheets/web/ost_theme/variables.scss
+++ b/app/assets/stylesheets/web/ost_theme/variables.scss
@@ -30,6 +30,8 @@ $powder-blue: #BEDCDF !default;
 $neptune: #6CA3A9 !default;
 $skeptic: #91C0AD !default;
 $side-bar-nav-width : 250px;
+$casal: #3C5056;
+
 
 $grays: () !default;
 $grays: map-merge((
@@ -62,6 +64,7 @@ $banana: #FBD764 !default; // customized
 $aqua: #84D1D4 !default; // customized
 $shakespeare: #69A2BD !default; // customized
 $telegram-color : #85b4ca !default; //customized
+$steel-teal: #5f818b !default; //customized
 
 // Theme background colors
 $yellow-bg: #F9F8E6 !default;
@@ -81,6 +84,7 @@ $blue-700:  #6da4a9  !default;
 $blue-800:  #597A84 !default; // font-primary
 $blue-900:  #34445b !default;
 $blue-1000:  #595b5e !default;
+$blue-1100: #aee1e3 !default;
 
 $green-400: #438cad !default;
 $green-500: #5a768c !default;
