--- a/app/views/shared/web/common/_index_svg_sprite.erb
+++ b/app/views/shared/web/common/_index_svg_sprite.erb
@@ -94,4 +94,14 @@
   <symbol id="icon-open-tab" viewBox="0 0 52 54">
     <path d="M72,476a2.017,2.017,0,0,0-.039-0.394c-0.011-.056-0.033-0.107-0.048-0.162a2.092,2.092,0,0,0-.065-0.212c-0.027-.064-0.064-0.123-0.1-0.184s-0.052-.108-0.086-0.159a2.058,2.058,0,0,0-.249-0.305,2.017,2.017,0,0,0-.3-0.249,1.692,1.692,0,0,0-.159-0.086c-0.061-.033-0.12-0.07-0.184-0.1s-0.141-.044-0.212-0.065c-0.054-.015-0.106-0.037-0.162-0.048A2.01,2.01,0,0,0,70,474H48.4a2,2,0,1,0,0,4h16.77L42.192,500.98a2,2,0,1,0,2.828,2.828L68,480.829V497.6a2,2,0,1,0,4,0V476ZM57.743,528H29.257A9.268,9.268,0,0,1,20,518.743V490.257A9.268,9.268,0,0,1,29.257,481h9.406a2,2,0,1,1,0,4H29.257A5.264,5.264,0,0,0,24,490.257v28.486A5.263,5.263,0,0,0,29.257,524H57.743A5.263,5.263,0,0,0,63,518.743V506.962a2,2,0,1,1,4,0v11.781A9.268,9.268,0,0,1,57.743,528Z" transform="translate(-20 -474)"/>
   </symbol>
+  <symbol id="success-icon" viewBox="0 0 55 55">
+    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+      <g id="KYC-CSV_sent" transform="translate(-693.000000, -202.000000)">
+        <g id="Success" transform="translate(693.000000, 202.000000)">
+          <circle id="Oval-Copy-3" fill="#AEE1E3" cx="27.5" cy="27.5" r="27.5"></circle>
+          <polyline id="Path-4-Copy-2" stroke="#FFFFFF" stroke-width="4.39999981" stroke-linecap="round" stroke-linejoin="round" points="17.4603175 27.7192061 24.8678091 34.9206349 41.031746 19.2063492"></polyline>
+        </g>
+      </g>
+    </g>
+  </symbol>
 </svg>
