adding a new position for berlin area

--- a/app/views/web/ost/careers.html.erb
+++ b/app/views/web/ost/careers.html.erb
@@ -70,6 +70,11 @@
                 description: "The Customer Support lead will be the front lines as representative of the company for any product related questions and technical guidance. You will be responsible for the troubleshooting of client issues, improving customer support processes and building relationships with our customer base.This will involve actively responding to people as they share their experiences of developing on our platform and gathering feedback on suggested new features or bugs that may impact our overall product roadmap. This is a great chance to immerse yourself in a developing blockchain product and take a pivotal role in building our customer support function as well as influencing the overall customer journey.",
             },
             {
+                profile: "Junior Office Manager with Accounting Knowledge",
+                profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1vf71LwK5SMuG@7SQ2jX8R8-&embedsource=Embed",
+                description: "The combined role of the Office Manager with Accounting Knowledge is the front person for all office related queries.",
+            },
+            {
                 location: "Hong Kong",
                 profile: "Blockchain Community Manager",
                 profile_link: "https://recruit.zoho.com/recruit/ViewJob.na?digest=ZmrHtYbqDUPdk8.eRn7Z1gsldxce320BG1zQYilNVHg-&embedsource=Embed",
