--- a/app/views/web/ost/winners.html.erb
+++ b/app/views/web/ost/winners.html.erb
@@ -1,2 +1,3 @@
 <%= render :partial => "/shared/web/common/navbar" %>
 <%= render :partial => "/web/ost/winners/jumbotron" %>
+<%= render :partial => "/web/ost/winners/subscribe" %>
