winners page twitter

--- a/app/views/web/ost/winners.html.erb
+++ b/app/views/web/ost/winners.html.erb
@@ -1,3 +1,4 @@
 <%= render :partial => "/shared/web/common/navbar" %>
 <%= render :partial => "/web/ost/winners/jumbotron" %>
+<%= render :partial => "/web/ost/winners/twitter_feed" %>
 <%= render :partial => "/web/ost/winners/subscribe" %>
