news carousel and jumbotron

--- a/app/views/web/ost/winners/_jumbotron.erb
+++ b/app/views/web/ost/winners/_jumbotron.erb
@@ -3,12 +3,13 @@
     <div class="row align-items-center">
 
       <div class="col-md-12 col-lg-6">
-        <h2>Connect to The Utility Blockchain</h2>
+        <h2>OST KITa: Phase II: Developer Proof of Concept Challenge</h2>
         <p class="mt-3">
-          The OST suite helps businesses gain competitive advantage with blockchain. OST KIT is our complete blockchain toolkit, now in its second Alpha phase. We'll be showcasing real Developer Proofs of Concept soon!
+          OST KYC is the first plug-and-play KYC/AML management solution for token sales. Process thousands of applicants smoothly and securely. Developed for the Simple Token "OST" ICO. Now available for any company to use.
         </p>
-        <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="Discover OST KIT⍺">Discover OST KIT⍺</a>
-        <a href="#developerresources" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="Developer Resources">Developer Resources</a>
+        <!--TODO: change link for winners-->
+        <a href="<%= GlobalConstant::CompanyOtherProductUrls.kit_root_url %>" class="btn btn-primary my-2 my-md-3 smooth-scroll" title="See The Winners">SEE THE WINNERS</a>
+        <a href="#developerresources" class="btn btn-secondary my-2 ml-xl-3 smooth-scroll" title="Developer Resources">SIGN UP FOR ALPHA III</a>
       </div>
 
       <div class="col-md-12 col-lg-6 text-center mt-3 mt-md-0">
