--- a/app/assets/stylesheets/web/ost/winners/Twitter.scss
+++ b/app/assets/stylesheets/web/ost/winners/Twitter.scss
@@ -2,5 +2,6 @@
 @import "../../ost_theme/variables";
 
 .container-twitter {
-  background-color: #34445b;
+  opacity: 0.2;
+  background-color: $spray;
 }
