--- a/app/views/web/ost/winners/_twitter_feed.erb
+++ b/app/views/web/ost/winners/_twitter_feed.erb
@@ -1,9 +1,18 @@
-<section class="container-twitter pt-5">
-  <div class="container">
-    <div class="row align-items-center">
-
-
-
+<section class="container-fluid container-twitter py-5">
+  <div class="row">
+    <div class="col-12">
+      <div class="twitter-carousel with-placeholder">
+          <div class="carousel-item">
+            <div class="thumbnail">
+              <div class="video-container">
+                <img class="thumb-img" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAJCAYAAAFMLZykAAAABGdBTUEAALGPC/xhBQAAABFJREFUKBVjYBgFoyFA1RAAAAJTAAEABdnJAAAAAElFTkSuQmCC" />
+              </div>
+              <div class="caption">
+                <h4></h4>
+              </div>
+            </div>
+          </div>
+      </div>
     </div>
   </div>
 </section>
