--- a/app/assets/stylesheets/web/ost_theme/variables.scss
+++ b/app/assets/stylesheets/web/ost_theme/variables.scss
@@ -31,6 +31,7 @@ $neptune: #6CA3A9 !default;
 $skeptic: #91C0AD !default;
 $side-bar-nav-width : 250px;
 $casal: #3C5056;
+$spray: #7DD5E4;
 
 
 $grays: () !default;
